@@ -1,6 +1,9 @@
 Changes in @NEW@:
   o New Feature:
     * Added support for versioned platform-defintions (RBL-5007).
+    * The API is now available under the rpath_proddef module. The
+      rpath_common interface will remain available for some time.
+      (RPCL-63)
 
   o Bug Fixes:
     * Use the faster getFileContentsFromTrove Conary interface, when
